# royale

./: .gitignore  CMakeLists.txt  README.md  main.cpp
app_game/: CMakeLists.txt
app_game/include/: application.hpp
app_game/src/: application.cpp
app_server/: CMakeLists.txt  main.cpp
game_core/: CMakeLists.txt
game_core/include/: GameContext.hpp  clock.hpp  config.hpp  elixirManager.hpp  game.hpp
game_core/include/cards/: CardData.hpp  CardType.hpp  PlacementType.hpp  Rarity.hpp  card.hpp  cardStats.hpp  structure.hpp
game_core/include/common/: gameObject.hpp  vector2.hpp
game_core/include/common/components/: AttackComponent.hpp  Component.hpp  HealthComponent.hpp  MovementComponent.hpp
game_core/include/common/entities/: EntityData.hpp  EntityType.hpp  ResourceType.hpp  TargetType.hpp  entity.hpp
game_core/include/common/strategies/: AttackStrategy.hpp  HealthStrategy.hpp  MovementStrategy.hpp  StrategyFactory.hpp
game_core/include/common/strategies/attack/: ArrowAttackStrategy.hpp  MeleeAttackStrategy.hpp
game_core/include/common/strategies/health/: BaseHealthStrategy.hpp
game_core/include/common/strategies/movement/: AccelerateMovementStrategy.hpp  GroundMovementStrategy.hpp
game_core/include/events/: cardPlacedEvent.hpp  event.hpp  eventType.hpp
game_core/include/game/: EntityManager.hpp  Utils.hpp  cardManager.hpp  elixirManager.hpp  tower.hpp  towerManager.hpp
game_core/include/network/: ClientInfo.hpp  NetUtils.hpp  client.hpp  server.hpp
game_core/include/network/packets/: CardPlacedPacket.hpp  CardPlacedPacketHandler.hpp  GamePacket.hpp  MatchMakingPacketHandler.hpp  MatchmakingPacket.hpp  Packet.hpp  PacketHandler.hpp  PacketHandlerRegistry.hpp  PacketType.hpp
game_core/src/: elixirManager.cpp  game.cpp
game_core/src/cards/: Card.cpp  CardData.cpp
game_core/src/common/: gameObject.cpp
game_core/src/common/components/: AttackComponent.cpp  HealthComponent.cpp  MovementComponent.cpp
game_core/src/common/entities/: EntityData.cpp  entity.cpp
game_core/src/common/strategies/: GroundMovementStrategy.cpp
game_core/src/common/strategies/attack/: ArrowAttackStrategy.cpp  MeleeAttackStrategy.cpp
game_core/src/common/strategies/health/: BaseHealthStrategy.cpp
game_core/src/common/strategies/movement/: AccelerateMovementStrategy.cpp  GroundMovementStrategy.cpp
game_core/src/events/: cardPlacedEvent.cpp
game_core/src/game/: EntityManager.cpp  cardManager.cpp  elixirManager.cpp  tower.cpp  towerManager.cpp
game_core/src/network/: NetUtils.cpp  client.cpp  server.cpp
game_core/src/network/packets/: CardPlacedPacket.cpp  CardPlacedPacketHandler.cpp  MatchMakingPacketHandler.cpp  MatchmakingPacket.cpp  PacketHandlerRegistry.cpp
game_ui/: CMakeLists.txt
game_ui/include/: EntityTexture.hpp  EntityTextureManager.hpp  SceneManager.hpp  UICard.hpp  applicationView.hpp  colorScheme.hpp  elixirBar.hpp  gameRenderer.hpp  textureManager.hpp  view.hpp
game_ui/include/components/: Button.hpp  Input.hpp  LoadingIcon.hpp  TextureComponent.hpp
game_ui/include/events/: MouseClickEvent.hpp  MouseEvent.hpp  MouseHoverEvent.hpp  MouseMoveEvent.hpp  MouseReleaseEvent.hpp
game_ui/include/nodes/: Card.hpp  CardHolder.hpp  ElixirBar.hpp  GameNode.hpp  GhostCard.hpp  IGameResolution.hpp  ISelectedCard.hpp  Node.hpp
game_ui/include/scenes/: GameScene.hpp  LoadingScene.hpp  MainScene.hpp  Scene.hpp  SearchScene.hpp
game_ui/src/: EntityTexture.cpp  EntityTextureManager.cpp  applicationView.cpp  gameRenderer.cpp  textureManager.cpp
game_ui/src/components/: Button.cpp  LoadingIcon.cpp  TextureComponent.cpp
game_ui/src/nodes/: Card.cpp  CardHolder.cpp  ElixirBar.cpp  GameNode.cpp  GhostCard.cpp  Node.cpp
game_ui/src/scenes/: GameScene.cpp  LoadingScene.cpp  MainScene.cpp  Scene.cpp  SearchScene.cpp
include/royale/: cardManager.hpp  config.hpp  game.hpp  view.hpp
include/royale/cards/: card.hpp  spell.hpp  unit.hpp
include/royale/common/: gameObject.hpp  vector2.hpp
include/royale/events/: cardPlacedEvent.hpp  event.hpp  eventType.hpp
include/royale/game/: tower.hpp  towerManager.hpp
include/royale/maps/: mapLoader.hpp
include/royale/network/: NetUtils.hpp  client.hpp  server.hpp
include/royale/ui/: UICard.hpp  UIElement.hpp  applicationView.hpp  card.hpp  gameRenderer.hpp  textureManager.hpp
include/royale/units/: unit.hpp  unitType.hpp
resources/cards/: archers.json  arrows.json  bomber.json  giant.json  goblins.json  golem.json  knight.json  none.json  prince.json  princess.json  x_bow.json
resources/entities/: archer.json  archer_tower.json  arrows.json  bomber.json  giant.json  goblin.json  golem.json  king_tower.json  knight.json  none.json  prince.json  princess.json  x_bow.json
src/: application.cpp  applicationView.cpp  gameRenderer.cpp
src/royale/: cardManager.cpp  clock.cpp  game.cpp
src/royale/events/: cardPlacedEvent.cpp
src/royale/game/: tower.cpp  towerManager.cpp
src/royale/network/: NetUtils.cpp  client.cpp  server.cpp
